--- a/program/src/static/settings.html
+++ b/program/src/static/settings.html
@@ -114,6 +114,69 @@
 		  </div>
 		  <hr>
 		  <div>
+			<h5>Lista</h3>
+			<input class="form-check-input" type="checkbox" value="" id="progr" onclick="IsRequired('progr')">
+			<label class="form-check-label" for="progr">
+				Progressivo
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="pid" onclick="IsRequired('pid')" checked>
+			<label class="form-check-label" for="pid">
+				Pid
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="bil" onclick="IsRequired('bil')" checked>
+			<label class="form-check-label" for="bil">
+				Bilancia
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="customer" onclick="IsRequired('customer')" checked>
+			<label class="form-check-label" for="customer">
+				Cliente
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="supplier" onclick="IsRequired('supplier')" checked>
+			<label class="form-check-label" for="supplier">
+				Fornitore
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="material" onclick="IsRequired('material')" checked>
+			<label class="form-check-label" for="material">
+				Materiale
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="plate" onclick="IsRequired('plate')" checked>
+			<label class="form-check-label" for="plate">
+				Targa
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="netWeight" onclick="IsRequired('net_weight')" checked>
+			<label class="form-check-label" for="netWeight">
+				Netto
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="dateTimeOne" onclick="IsRequired('date_time_one')" checked>
+			<label class="form-check-label" for="dateTimeOne">
+				Data ora 1
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="weightOne" onclick="IsRequired('weight_one')" checked>
+			<label class="form-check-label" for="weightOne">
+				Peso 1
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="dateTimeTwo" onclick="IsRequired('date_time_two')" checked>
+			<label class="form-check-label" for="dateTimeTwo">
+				Data ora 2
+		    </label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="weightTwo" onclick="IsRequired('weight_two')" checked>
+			<label class="form-check-label" for="weightTwo">
+				Peso 2
+		    </label>
+		  </div>
+		  <hr>
+		  <div>
 			  <label class="my-1 mr-2" for="divisions">Divisione selezionata</label>
 			  <select class="custom-select my-1 mr-sm-2 form-select" id="divisions" style="width: 200px">
 			  </select>
