--- a/program/src/static/dashboard.html
+++ b/program/src/static/dashboard.html
@@ -63,9 +63,9 @@
 		
 	<div class="buttons-pc">
 		<div class="buttons">
-			<button id="btn-tara" onclick="Tara()">TARA</button>
-			<button id="btn-preset-tara" onclick="PresetTara()">P. TARA</button>
-			<button id="btn-zero" onclick="Zero()">ZERO</button>
+			<button id="btnpc-tara" onclick="Tara()">TARA</button>
+			<button id="btnpc-preset-tara" onclick="PresetTara()">P. TARA</button>
+			<button id="btnpc-zero" onclick="Zero()">ZERO</button>
 		</div>
 		<div class="buttons">
 			<button id="btnpc-print" onclick="Print()">STAMPA</button>    
@@ -76,11 +76,11 @@
 	
 	<div class="buttons-sm">
 		<div class="buttons">
-			<button id="btn-tara" onclick="Tara()">TARA</button>
-			<button id="btn-preset-tara" onclick="PresetTara()">P. TARA</button>
+			<button id="btnsm-tara" onclick="Tara()">TARA</button>
+			<button id="btnsm-preset-tara" onclick="PresetTara()">P. TARA</button>
 		</div>
 		<div class="buttons">
-			<button id="btn-zero" onclick="Zero()">ZERO</button>
+			<button id="btnsm-zero" onclick="Zero()">ZERO</button>
 			<button id="btnsm-print" onclick="Print()">STAMPA</button>    
 		</div>
 		<div class="buttons">
