--- a/program/src/static/settings.html
+++ b/program/src/static/settings.html
@@ -114,6 +114,40 @@
 		  </div>
 		  <hr>
 		  <div>
+			<h5>Bottoni</h5>
+			<input class="form-check-input" type="checkbox" value="" id="tare" onclick="IsActive('tare')">
+			<label class="form-check-label" for="tare">
+				Tara
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="p_tare" onclick="IsActive('p_tare')">
+			<label class="form-check-label" for="p_tare">
+				P. Tara
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="zero" onclick="IsActive('zero')">
+			<label class="form-check-label" for="zero">
+				Zero
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="print" onclick="IsActive('print')">
+			<label class="form-check-label" for="print">
+				Print
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="weight_one" onclick="IsActive('weight_one')">
+			<label class="form-check-label" for="weight_one">
+				Pesata 1
+			</label>
+			<br>
+			<input class="form-check-input" type="checkbox" value="" id="weight_two" onclick="IsActive('weight_two')">
+			<label class="form-check-label" for="weight_two">
+				Pesata 2
+			</label>
+			<br>
+		</div>
+		  <hr>
+		  <div>
 			<h5>Lista</h3>
 			<input class="form-check-input" type="checkbox" value="" id="progr" onclick="IsRequired('progr')">
 			<label class="form-check-label" for="progr">
