fixed export data

--- a/program/src/static/records.html
+++ b/program/src/static/records.html
@@ -89,7 +89,7 @@
                 <input type="submit" value="Cancella filtri" id="cancella" onclick="submitForm()">
               </div>
             </form>
-            <p>Totale: <span id="total"></span></p>
+            <p>Totale netto: <span id="totalNet"></span></p>
           </div>
         </th>
     </tr>
